Fix invisible text insome CCSM treeviews

--- a/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
+++ b/UbuntuStudio_Legacy/gtk-3.20/apps/apps.css
@@ -609,12 +609,19 @@ headerbar.primary-toolbar.toolbar{
 	background-image: none;
 	border-image: none;
 	border-color: transparent;
+	color: @theme_text_color;
 }
 
 /*Keep the theme the same in expander-controlled sections*/
 .ccsm-window expander,
+.ccsm-window expander treeview .header,
 .ccsm-window expander *{
 	color: @theme_fg_color;
+}
+
+/*Deal with the fallout in treeviews*/
+.ccsm-window expander treeview :not(:selected){
+	color: @theme_text_color;
 }
 
 /*Spinbuttons have white label backgrounds so set their text dark*/
